feat: implemented turnBack()